--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,15 +3,16 @@
   "compilerOptions": {
     "strict": true,
     "paths": {
-      "@/*": [
-        "./*"
-      ]
+      "@/*": ["./*"]
     }
   },
   "include": [
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
-    "expo-env.d.ts"
+    "expo-env.d.ts",
+    "app/(auth)/sign-in.jsx",
+    "app/(auth)/sign-up.jsx",
+    "context/AuthContext.jsx"
   ]
 }
