--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "base-64": "^1.0.0",
     "crypto-js": "^4.2.0",
     "expo": "~52.0.32",
     "expo-auth-session": "~6.0.3",
