--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "app/(auth)/sign-in.jsx",
     "app/(auth)/sign-up.jsx",
     "context/AuthContext.jsx",
-    "app/index.jsx"
+    "app/index.jsx",
+    "app/(tabs)/index.jsx"
   ]
 }
